// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contextless-gradle-config-toggle Basic renders as expected 1`] = `
<div
  className="my24 prose"
>
  <div
    className="my24"
  >
    <div
      className="flex-mm flex--space-between-main-mm mb6"
    >
      <div
        className="flex-mm"
      >
        <div
          className="txt-bold color-gray-dar mb6"
        />
      </div>
      <div>
        <div
          className="relative "
        >
          <div
            aria-required={true}
            className="toggle-group round-full bg-blue py3 px3"
            data-testid="test-groovy-kotlin-input"
            id="test-groovy-kotlin"
            role="radiogroup"
          >
            <label
              className="toggle-container "
            >
              <input
                autoFocus={false}
                checked={true}
                data-testid="test-groovy-kotlin-0-input"
                name="test-groovy-kotlin"
                onChange={[Function]}
                type="radio"
                value="kotlin"
              />
              <div
                className="txt-s py3 toggle--white toggle--active-blue toggle"
              >
                Kotlin
              </div>
            </label>
            <label
              className="toggle-container "
            >
              <input
                autoFocus={false}
                checked={false}
                data-testid="test-groovy-kotlin-1-input"
                name="test-groovy-kotlin"
                onChange={[Function]}
                type="radio"
                value="groovy"
              />
              <div
                className="txt-s py3 toggle--white toggle--active-blue toggle"
              >
                Groovy
              </div>
            </label>
          </div>
          <div
            role="alert"
          />
        </div>
      </div>
    </div>
    <div
      className="relative round z0 scroll-styled overflow-auto"
      style={
        Object {
          "maxHeight": 480,
        }
      }
    >
      <pre>
        <code
          className="px0 hljs"
        >
          <div
            className="relative z2"
            data-chunk-code="chunk-0"
          >
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 12,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "android <span class=\\"token punctuation\\">{</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 26.45,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "defaultConfig <span class=\\"token punctuation\\">{</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 55.349999999999994,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"token function\\">minSdkVersion</span><span class=\\"token punctuation\\">(</span><span class=\\"token number\\">21</span><span class=\\"token punctuation\\">)</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 55.349999999999994,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"token function\\">targetSdkVersion</span><span class=\\"token punctuation\\">(</span><span class=\\"token number\\">27</span><span class=\\"token punctuation\\">)</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 26.45,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"token punctuation\\">}</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 12,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"token punctuation\\">}</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
          </div>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`contextless-gradle-config-toggle Kotlin only renders as expected 1`] = `
<div
  className="my24 prose"
>
  <div
    className="my24"
  >
    
    <div
      className="relative round z0 scroll-styled overflow-auto"
      style={
        Object {
          "maxHeight": 480,
        }
      }
    >
      <pre>
        <code
          className="px0 hljs"
        >
          <div
            className="relative z2"
            data-chunk-code="chunk-0"
          >
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 12,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"token function\\">implementation</span><span class=\\"token punctuation\\">(</span><span class=\\"token interpolation-string\\"><span class=\\"token string\\">\\"com.mapbox.maps:android:10.0.0\\"</span></span><span class=\\"token punctuation\\">)</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
          </div>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`contextless-gradle-config-toggle Two languages (code toggle not interactive) renders as expected 1`] = `
<div
  className="my24 prose"
>
  <div
    className="my24"
  >
    <div
      className="flex-mm flex--space-between-main-mm mb6"
    >
      <div
        className="flex-mm"
      >
        <div
          className="txt-bold color-gray-dar mb6"
        />
      </div>
      <div>
        <div
          className="relative "
        >
          <div
            aria-required={true}
            className="toggle-group round-full bg-blue py3 px3"
            data-testid="test-groovy-kotlin-input"
            id="test-groovy-kotlin"
            role="radiogroup"
          >
            <label
              className="toggle-container "
            >
              <input
                autoFocus={false}
                checked={false}
                data-testid="test-groovy-kotlin-0-input"
                name="test-groovy-kotlin"
                onChange={[Function]}
                type="radio"
                value="kotlin"
              />
              <div
                className="txt-s py3 toggle--white toggle--active-blue toggle"
              >
                Kotlin
              </div>
            </label>
            <label
              className="toggle-container "
            >
              <input
                autoFocus={false}
                checked={true}
                data-testid="test-groovy-kotlin-1-input"
                name="test-groovy-kotlin"
                onChange={[Function]}
                type="radio"
                value="groovy"
              />
              <div
                className="txt-s py3 toggle--white toggle--active-blue toggle"
              >
                Groovy
              </div>
            </label>
          </div>
          <div
            role="alert"
          />
        </div>
      </div>
    </div>
    <div
      className="relative round z0 scroll-styled overflow-auto"
      style={
        Object {
          "maxHeight": 480,
        }
      }
    >
      <pre>
        <code
          className="px0 hljs"
        >
          <div
            className="relative z2"
            data-chunk-code="chunk-0"
          >
            <div
              className="pr12"
              style={
                Object {
                  "paddingLeft": 12,
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "implementation <span class=\\"token string\\">'com.mapbox.maps:android:10.0.0'</span>",
                  }
                }
                style={
                  Object {
                    "marginLeft": 14.45,
                    "textIndent": -14.45,
                  }
                }
              />
            </div>
          </div>
        </code>
      </pre>
    </div>
  </div>
</div>
`;
